# testlar

./: CMakeLists.txt  README.md  test.sh
include/testlar/: testing.h
src/testlar/: testing.c
test/testlar/: runner_test.c  t.h  t_error_test.c  t_errorf_test.c
